--- a/catalog/view/theme/helium/template/checkout/quick_checkout_shipping.twig
+++ b/catalog/view/theme/helium/template/checkout/quick_checkout_shipping.twig
@@ -1,24 +1,25 @@
 {% if shipping_methods %}
+  {{ selected_shipping_method }}
+  {# {{ shipping_methods | json_encode(constant('JSON_PRETTY_PRINT')) }} #}
   <div id="js_shipping_methods">
-    <span class="h2">lolol{{ text_shipping }}</span>
+    <span class="h2">{{ text_shipping_methods }}</span>
     {% for shipping_method in shipping_methods %}
       {% if not shipping_method.error %}
         {% if shipping_method.quote %}
           {% for quote in shipping_method.quote %}
             <div class="form-control">
-              {% if quote.code == code or not code %}
-                {% set code = quote.code %}
-                  <input id="{{ quote.code }}" type="radio" name="shipping_method" value="{{ quote.code }}" checked="checked" />
-                {% else %}
-                  <input id="{{ quote.code }}" type="radio" name="shipping_method" value="{{ quote.code }}" />
-                {% endif %}
+              {% if selected_shipping_method == quote.code %}
+                <input id="{{ quote.code }}" type="radio" name="shipping_method" value="{{ quote.code }}" checked="checked" />
+              {% else %}
+                <input id="{{ quote.code }}" type="radio" name="shipping_method" value="{{ quote.code }}" />
+              {% endif %}
               <label for="{{ quote.code }}">{{ quote.title }} - {{ quote.text }}</label>
             </div>
           {% endfor %}
         {% else %}
           {% if shipping_method.status == 1 %}
             <div class="form-control">
-          <input type="radio" value="{{ shipping_method.code }}" id="shipping_{{ shipping_method.code }}" name="shipping_method" {% if loop.first %} checked {% endif %}/>
+              <input type="radio" value="{{ shipping_method.code }}" id="shipping_{{ shipping_method.code }}" name="shipping_method" {% if loop.first %} checked {% endif %}/>
               <label for="shipping_{{ shipping_method.code }}">{{ shipping_method.title }}</label>
             </div>
           {% endif %}
