PHP: Change input names, fix lang files

--- a/catalog/view/theme/helium/template/checkout/quick_checkout.twig
+++ b/catalog/view/theme/helium/template/checkout/quick_checkout.twig
@@ -85,8 +85,8 @@
       <label for="input-quick-checkout-telephone">{{ entry_telephone }}, {{ entry_email }}</label>
       <input
         type="tel"
-        name="telephone"
-        value="{{ telephone }}"
+        name="phone"
+        value="{{ phone }}"
         placeholder="{{ entry_telephone }}"
         id="input-quick-checkout-telephone"
         inputmode="tel"
