--- a/catalog/view/theme/helium/template/common/footer.twig
+++ b/catalog/view/theme/helium/template/common/footer.twig
@@ -52,6 +52,6 @@
   <script src="{{ script }}" type="text/javascript"></script>
 {% endfor %}
 <script defer rel="preload" as="script" type="text/javascript" src="catalog/view/theme/helium/js/common.js" type="text/javascript"></script>
-
+<script>console.debug({{ _context | json_encode | raw }});</script>
 </body>
 </html>
