--- a/catalog/view/theme/helium/template/account/address_list.twig
+++ b/catalog/view/theme/helium/template/account/address_list.twig
@@ -1,16 +1,10 @@
 {{ header }}
 {% include 'helium/template/common/breadcrumbs.twig' %}
 <main role="main" id="account-address">
-  {% if success %}
-    <div class="alert alert-success alert-dismissible"><i class="icon-info"></i> {{ success }}</div>
-  {% endif %}
-  {% if error_warning %}
-    <div class="alert alert-warning"><i class="icon-alert"></i> {{ error_warning }}</div>
-  {% endif %}
-
+  {% if success %}<div role="alert" class="alert alert-success"><i class="icon-info"></i> {{ success }}</div>{% endif %}
+  {% if error_warning %}<div role="alert" class="alert alert-warning"><i class="icon-alert"></i> {{ error_warning }}</div>{% endif %}
   <h2>{{ text_address_book }}</h2>
   {{ content_top }}
-
   {% if addresses %}
     <div class="table-responsive">
       <table class="table table-bordered table-hover">
@@ -18,8 +12,12 @@
           <form  action="{{ result.delete }}" method="post" enctype="multipart/form-data" id="form-address-{{ result.address_id }}">
         <tr>
           <td class="text-left">{{ result.address }}</td>
-          <td class="text-right"><a href="{{ result.update }}">{{ button_edit }}</a> &nbsp; 
-          <a href = "{{ result.delete }}" data-toggle="tooltip" title="{{ button_delete }}" class="danger" onclick="return confirm('{{ text_confirm }}')">{{ button_delete }}</a></td>
+          <td class="text-right">
+            <div class="btn-group">
+              <a href="{{ result.update }}" class="button"><i class="icon-edit"></i>{{ button_edit }}</a>   
+              <a href="{{ result.delete }}" title="{{ button_delete }}" class="button" onclick="return confirm('{{ text_confirm }}')"><i class="icon-trash"></i>{{ button_delete }}</a>
+            </div>
+          </td>
         </tr>
         </form>
         {% endfor %}
@@ -28,12 +26,10 @@
   {% else %}
     <p>{{ text_empty }}</p>
   {% endif %}
-
   {{ content_bottom }}
-
-  <div class="buttons clearfix">
-    <div class="pull-left"><a href="{{ back }}" class="default">{{ button_back }}</a></div>
-    <div class="pull-right"><a href="{{ add }}" class="primary">{{ button_new_address }}</a></div>
+  <div class="btn-group spaced">
+    <a href="{{ back }}" class="button"><i class="icon-chevron-left"></i>{{ button_back }}</a>
+    <a href="{{ add }}" class="button"><i class="icon-location"></i>{{ button_new_address }}</a>
   </div>
 </main>
 {{ column_left }}
