Replace fa icons, add role=alert, remove bootstrap

--- a/catalog/view/theme/helium/template/account/account.twig
+++ b/catalog/view/theme/helium/template/account/account.twig
@@ -2,7 +2,7 @@
 {% include 'helium/template/common/breadcrumbs.twig' %}
 <main role="main" id="account-account" >
   {% if success %}
-    <div class="alert alert-success"><i class="icon-info"></i></i> {{ success }}</div>
+    <div role="alert" class="alert-success"><i class="icon-info"></i> {{ success }}</div>
   {% endif %}
   {{ content_top }}
   <div class="links grid">
