--- a/catalog/view/theme/helium/template/common/cart_select_options.twig
+++ b/catalog/view/theme/helium/template/common/cart_select_options.twig
@@ -70,7 +70,7 @@
       </button>
     </div>
     {% if minimum > 1 %}
-      <div class="alert alert-info"><i class="icon-info"></i> 
+      <div role="alert" class="alert-info"><i class="icon-info"></i> 
         {{ text_minimum }}
       </div>
     {% endif %}
