--- a/catalog/view/theme/helium/template/account/affiliate.twig
+++ b/catalog/view/theme/helium/template/account/affiliate.twig
@@ -2,7 +2,7 @@
 {% include 'helium/template/common/breadcrumbs.twig' %}
 <main role="main" id="account-affiliate">
   {% if error_warning %}
-  <div class="alert alert-danger alert-dismissible"><i class="fa fa-exclamation-circle"></i> {{ error_warning }}</div>
+  <div role="alert" class="alert-danger"><i class="icon-alert"></i> {{ error_warning }}</div>
   {% endif %}
 
   <h1>{{ heading_title }}</h1>
@@ -228,7 +228,7 @@
       <div class="form-group{% if custom_field.required %} required {% endif %} custom-field" data-sort="{{ custom_field.sort_order }}">
         <label>{{ custom_field.name }}</label>
         <div class="col-sm-10">
-          <button type="button" id="button-custom-field{{ custom_field.custom_field_id }}" class="button"><i class="fa fa-upload"></i> {{ button_upload }}</button>
+          <button type="button" id="button-custom-field{{ custom_field.custom_field_id }}" class="button"> {{ button_upload }}</button>
           <input type="hidden" name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" value="{% if affiliate_custom_field[custom_field.custom_field_id] %}{{ affiliate_custom_field[custom_field.custom_field_id] }} {% endif %}" />
           {% if error_custom_field[custom_field.custom_field_id] %}
           <span class="text-danger">{{ error_custom_field[custom_field.custom_field_id] }}</div>
