--- a/catalog/view/theme/helium/template/account/edit.twig
+++ b/catalog/view/theme/helium/template/account/edit.twig
@@ -3,7 +3,7 @@
 <main role="main" id="account-edit">
 
   {% if error_warning %}
-    <div role="alert" class="alert alert-danger alert-dismissible"><i class="icon-alert"></i> {{ error_warning }}</div>
+    <div role="alert" class="alert-danger"><i class="icon-alert"></i> {{ error_warning }}</div>
   {% endif %}
   <h1>{{ heading_title }}</h1>
   {{ content_top }}
@@ -177,7 +177,7 @@
         <div class="form-group{% if custom_field.required %} required {% endif %} custom-field" data-sort="{{ custom_field.sort_order }}">
           <label>{{ custom_field.name }}</label>
           <div class="col-sm-10">
-            <button type="button" id="button-custom-field{{ custom_field.custom_field_id }}" class="button"><i class="fa fa-upload"></i> {{ button_upload }}</button>
+            <button type="button" id="button-custom-field{{ custom_field.custom_field_id }}" class="button"> {{ button_upload }}</button>
             <input type="hidden" name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" value="{% if account_custom_field[custom_field.custom_field_id]['code'] %}{{ account_custom_field[custom_field.custom_field_id]['code'] }} {% endif %}" />
             <span>{{ account_custom_field[custom_field.custom_field_id]['name'] }}</span>
             {% if error_custom_field[custom_field.custom_field_id] %}
