--- a/catalog/view/theme/helium/template/account/forgotten.twig
+++ b/catalog/view/theme/helium/template/account/forgotten.twig
@@ -3,7 +3,7 @@
 <main role="main" id="account-forgotten">
 
   {% if error_warning %}
-  <div class="alert alert-danger alert-dismissible"><i class="fa fa-exclamation-circle"></i> {{ error_warning }}</div>
+  <div role="alert" class="alert-danger"><i class="icon-alert"></i> {{ error_warning }}</div>
   {% endif %}
   
   <h1>{{ heading_title }}</h1>
