--- a/catalog/view/theme/helium/template/account/order_info.twig
+++ b/catalog/view/theme/helium/template/account/order_info.twig
@@ -2,13 +2,13 @@
 {% include 'helium/template/common/breadcrumbs.twig' %}
 <main role="main" id="account-order">
   {% if success %}
-  <div class="alert alert-success alert-dismissible"><i class="icon-info"></i> {{ success }}
-    <button type="button" class="close" data-dismiss="alert">&times;</button>
+  <div role="alert" class="alert-success"><i class="icon-info"></i> {{ success }}
+    <button type="button" class="close">&times;</button>
   </div>
   {% endif %}
   {% if error_warning %}
-  <div class="alert alert-danger alert-dismissible"><i class="icon-alert"></i> {{ error_warning }}
-    <button type="button" class="close" data-dismiss="alert">&times;</button>
+  <div role="alert" class="alert-danger"><i class="icon-alert"></i> {{ error_warning }}
+    <button type="button" class="close">&times;</button>
   </div>
   {% endif %}
   
@@ -71,7 +71,7 @@
             <td class="text-right">{{ product.quantity }}</td>
             <td class="text-right">{{ product.price }}</td>
             <td class="text-right">{{ product.total }}</td>
-            <td class="text-right" style="white-space: nowrap;">{% if product.reorder %} <a href="{{ product.reorder }}" data-toggle="tooltip" title="{{ button_reorder }}" class="primary"><i class="icon-cart"></i></a> {% endif %} <a href="{{ product.return }}" data-toggle="tooltip" title="{{ button_return }}" class="danger"><i class="icon-reply"></i></a></td>
+            <td class="text-right" style="white-space: nowrap;">{% if product.reorder %} <a href="{{ product.reorder }}" title="{{ button_reorder }}" class="primary"><i class="icon-cart"></i></a> {% endif %} <a href="{{ product.return }}" title="{{ button_return }}" class="danger"><i class="icon-reply"></i></a></td>
           </tr>
         {% endfor %}
 
