--- a/catalog/view/theme/helium/template/account/recurring_list.twig
+++ b/catalog/view/theme/helium/template/account/recurring_list.twig
@@ -22,7 +22,7 @@
             <td class="text-left">{{ recurring.product }}</td>
             <td class="text-left">{{ recurring.status }}</td>
             <td class="text-left">{{ recurring.date_added }}</td>
-            <td class="text-right"><a href="{{ recurring.view }}" data-toggle="tooltip" title="{{ button_view }}" class="btn btn-info"><i class="fa fa-eye"></i></a></td>
+            <td class="text-right"><a href="{{ recurring.view }}" title="{{ button_view }}" ><i class="icon-eye"></i></a></td>
           </tr>
           {% endfor %}
         </tbody>
