--- a/catalog/view/theme/helium/template/account/return_form.twig
+++ b/catalog/view/theme/helium/template/account/return_form.twig
@@ -6,7 +6,7 @@
     {% endfor %}
   </ul>
   {% if error_warning %}
-  <div class="alert alert-danger alert-dismissible"><i class="icon-alert"></i> {{ error_warning }}</div>
+  <div role="alert" class="alert-danger"><i class="icon-alert"></i> {{ error_warning }}</div>
   {% endif %}
   <div class="row"> {{ column_left }}
 
