--- a/catalog/view/theme/helium/template/account/tracking.twig
+++ b/catalog/view/theme/helium/template/account/tracking.twig
@@ -12,7 +12,7 @@
       </div>
     </div>
     <div class="form-group">
-      <label for="input-generator"><span data-toggle="tooltip" title="{{ help_generator }}">{{ entry_generator }}</span></label>
+      <label for="input-generator"><span title="{{ help_generator }}">{{ entry_generator }}</span></label>
       <div class="col-sm-10">
         <input type="text" name="product" value="" placeholder="{{ entry_generator }}" id="input-generator" />
       </div>
