--- a/catalog/view/theme/helium/template/account/voucher.twig
+++ b/catalog/view/theme/helium/template/account/voucher.twig
@@ -2,7 +2,7 @@
 {% include 'helium/template/common/breadcrumbs.twig' %}
 <main role="main" id="account-voucher">
   {% if error_warning %}
-    <div class="alert alert-danger alert-dismissible"><i class="fa fa-exclamation-circle"></i> {{ error_warning }}</div>
+    <div role="alert" class="alert-danger"><i class="icon-alert"></i> {{ error_warning }}</div>
   {% endif %}
   <h1>{{ heading_title }}</h1>
   {{ content_top }}
@@ -68,13 +68,13 @@
       </div>
     </div>
     <div class="form-group">
-      <label for="input-message"><span data-toggle="tooltip" title="{{ help_message }}">{{ entry_message }}</span></label>
+      <label for="input-message"><span title="{{ help_message }}">{{ entry_message }}</span></label>
       <div class="col-sm-10">
         <textarea name="message" cols="40" rows="5" id="input-message" class="form-control">{{ message }}</textarea>
       </div>
     </div>
     <div class="form-group">
-      <label for="input-amount"><span data-toggle="tooltip" title="{{ help_amount }}">{{ entry_amount }}</span></label>
+      <label for="input-amount"><span title="{{ help_amount }}">{{ entry_amount }}</span></label>
       <div class="col-sm-10">
         <input type="text" name="amount" value="{{ amount }}" id="input-amount" class="form-control" size="5" />
         {% if error_amount %}
