--- a/catalog/view/theme/helium/template/affiliate/login.twig
+++ b/catalog/view/theme/helium/template/affiliate/login.twig
@@ -2,10 +2,10 @@
 {% include 'helium/template/common/breadcrumbs.twig' %}
 <main role="main" id="affiliate-login">
   {% if success %}
-    <div class="alert alert-success alert-dismissible"><i class="icon-info"></i></i> {{ success }}</div>
+    <div role="alert" class="alert-success"><i class="icon-info"></i> {{ success }}</div>
   {% endif %}
   {% if error_warning %}
-    <div class="alert alert-danger alert-dismissible"><i class="fa fa-exclamation-circle"></i> {{ error_warning }}</div>
+    <div role="alert" class="alert-danger"><i class="icon-alert"></i> {{ error_warning }}</div>
   {% endif %}
   <h1>{{ heading_title }}</h1>
   {{ content_top }}
