--- a/catalog/view/theme/helium/template/affiliate/register.twig
+++ b/catalog/view/theme/helium/template/affiliate/register.twig
@@ -3,7 +3,7 @@
 <main role="main" id="affiliate-register">
 
   {% if error_warning %}
-    <div class="alert alert-danger alert-dismissible"><i class="fa fa-exclamation-circle"></i> {{ error_warning }}</div>
+    <div role="alert" class="alert-danger"><i class="icon-alert"></i> {{ error_warning }}</div>
   {% endif %}
   {{ content_top }}
   <h1>{{ heading_title }}</h1>
@@ -223,7 +223,7 @@
       <div id="custom-field{{ custom_field.custom_field_id }}" class="form-group custom-field" data-sort="{{ custom_field.sort_order }}">
         <label>{{ custom_field.name }}</label>
         <div class="col-sm-10">
-          <button type="button" id="button-custom-field{{ custom_field.custom_field_id }}" class="button"><i class="fa fa-upload"></i> {{ button_upload }}</button>
+          <button type="button" id="button-custom-field{{ custom_field.custom_field_id }}" class="button"> {{ button_upload }}</button>
           <input type="hidden" name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" value="{% if register_custom_field[custom_field.custom_field_id] %}  {{ register_custom_field[custom_field.custom_field_id] }} {% endif %}" />
           {% if error_custom_field[custom_field.custom_field_id] %}
           <span class="text-danger">{{ error_custom_field[custom_field.custom_field_id] }}</div>
@@ -514,7 +514,7 @@
         <div id="custom-field{{ custom_field.custom_field_id }}" class="form-group custom-field" data-sort="{{ custom_field.sort_order }}">
           <label>{{ custom_field.name }}</label>
           <div class="col-sm-10">
-            <button type="button" id="button-custom-field{{ custom_field.custom_field_id }}" class="button"><i class="fa fa-upload"></i> {{ button_upload }}</button>
+            <button type="button" id="button-custom-field{{ custom_field.custom_field_id }}" class="button"> {{ button_upload }}</button>
             <input type="hidden" name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" value="{% if register_custom_field[custom_field.custom_field_id] %}  {{ register_custom_field[custom_field.custom_field_id] }} {% endif %}" />
             {% if error_custom_field[custom_field.custom_field_id] %}
             <span class="text-danger">{{ error_custom_field[custom_field.custom_field_id] }}</div>
