--- a/catalog/view/theme/helium/template/blog/article.twig
+++ b/catalog/view/theme/helium/template/blog/article.twig
@@ -168,11 +168,11 @@
 // 			$('.alert-dismissible').remove();
 
 // 			if (json['error']) {
-// 				$('#review').after('<div class="alert alert-danger alert-dismissible"><i class="fa fa-exclamation-circle"></i> ' + json['error'] + '</div>');
+// 				$('#review').after('<div role="alert" class="alert-danger"><i class="icon-alert"></i> ' + json['error'] + '</div>');
 // 			}
 
 // 			if (json['success']) {
-// 				$('#review').after('<div class="alert alert-success alert-dismissible"><i class="icon-info"></i></i> ' + json['success'] + '</div>');
+// 				$('#review').after('<div role="alert" class="alert-success"><i class="icon-info"></i> ' + json['success'] + '</div>');
 
 // 				$('input[name=\'name\']').val('');
 // 				$('textarea[name=\'text\']').val('');
