--- a/catalog/view/theme/helium/template/checkout/cart.twig
+++ b/catalog/view/theme/helium/template/checkout/cart.twig
@@ -2,18 +2,18 @@
 {% include 'helium/template/common/breadcrumbs.twig' %}
 <main role="main" id="checkout-cart">
   {% if attention %}
-  <div class="alert alert-info"><i class="fa fa-info-circle"></i> {{ attention }}
-    <button type="button" class="close" data-dismiss="alert">&times;</button>
+  <div role="alert" class="alert-info"><i class="icon-info"></i> {{ attention }}
+    <button type="button" class="close">&times;</button>
   </div>
   {% endif %}
   {% if success %}
-  <div class="alert alert-success alert-dismissible"><i class="icon-info"></i></i> {{ success }}
-    <button type="button" class="close" data-dismiss="alert">&times;</button>
+  <div role="alert" class="alert-success"><i class="icon-info"></i> {{ success }}
+    <button type="button" class="close">&times;</button>
   </div>
   {% endif %}
   {% if error_warning %}
-  <div class="alert alert-danger alert-dismissible"><i class="fa fa-exclamation-circle"></i> {{ error_warning }}
-    <button type="button" class="close" data-dismiss="alert">&times;</button>
+  <div role="alert" class="alert-danger"><i class="icon-alert"></i> {{ error_warning }}
+    <button type="button" class="close">&times;</button>
   </div>
   {% endif %}
   <h1>{{ heading_title }}{% if weight %}&nbsp;({{ weight }}){% endif %}</h1>
@@ -49,8 +49,8 @@
             <td class="text-left"><div class="input-group btn-block" style="max-width: 200px;">
                 <input type="text" name="quantity[{{ product.cart_id }}]" value="{{ product.quantity }}" size="1" />
                 <span class="input-group-btn">
-                <button type="submit" data-toggle="tooltip" title="{{ button_update }}" class="primary"><i class="fa fa-refresh"></i></button>
-                <button type="button" data-toggle="tooltip" title="{{ button_remove }}" class="danger" onclick="cart.remove('{{ product.cart_id }}');"><i class="fa fa-times-circle"></i></button>
+                <button type="submit" title="{{ button_update }}" class="primary"><i class="icon-reload"></i></button>
+                <button type="button" title="{{ button_remove }}" class="danger" onclick="cart.remove('{{ product.cart_id }}');">&times;</i></button>
                 </span></div></td>
             <td class="text-right">{{ product.price }}</td>
             <td class="text-right">{{ product.total }}</td>
@@ -64,7 +64,7 @@
             <td class="text-left"><div class="input-group btn-block" style="max-width: 200px;">
                 <input type="text" name="" value="1" size="1" disabled="disabled" />
                 <span class="input-group-btn">
-                <button type="button" data-toggle="tooltip" title="{{ button_remove }}" class="danger" onclick="voucher.remove('{{ voucher.key }}');"><i class="fa fa-times-circle"></i></button>
+                <button type="button" title="{{ button_remove }}" class="danger" onclick="voucher.remove('{{ voucher.key }}');">&times;</i></button>
                 </span></div></td>
             <td class="text-right">{{ voucher.amount }}</td>
             <td class="text-right">{{ voucher.amount }}</td>
@@ -97,7 +97,7 @@
     </div>
   </div>
   {{ content_bottom }}
-  <div class="buttons clearfix">
+  <div class="btn-group spaced">
     <div class="pull-left"><a href="{{ continue }}" class="default">{{ button_shopping }}</a></div>
     <div class="pull-right"><a href="{{ checkout }}" class="primary">{{ button_checkout }}</a></div>
   </div>
