--- a/catalog/view/theme/helium/template/checkout/payment_method.twig
+++ b/catalog/view/theme/helium/template/checkout/payment_method.twig
@@ -1,5 +1,5 @@
 {% if error_warning %}
-  <div class="alert alert-warning alert-dismissible"><i class="fa fa-exclamation-circle"></i> {{ error_warning }}</div>
+  <div role="alert" class="alert-warning"><i class="icon-alert"></i> {{ error_warning }}</div>
 {% endif %}
 
 {% if payment_methods %}
