--- a/catalog/view/theme/helium/template/checkout/quick_checkout_payment.twig
+++ b/catalog/view/theme/helium/template/checkout/quick_checkout_payment.twig
@@ -1,6 +1,6 @@
 <span class="h2">{{ text_payment_methods }}</span>
 {% if payment_methods.error_warning %}
-  <div class="alert alert-warning alert-dismissible"><i class="fa fa-exclamation-circle"></i> {{ error_warning }}</div>
+  <div role="alert" class="alert-warning"><i class="icon-alert"></i> {{ error_warning }}</div>
 {% endif %}
 {% if payment_methods %}
   {% for payment_method in payment_methods %}
