--- a/catalog/view/theme/helium/template/checkout/register.twig
+++ b/catalog/view/theme/helium/template/checkout/register.twig
@@ -133,7 +133,7 @@
               {{ custom_field.name }}
             </label>
             <br />
-            <button type="button" id="button-payment-custom-field{{ custom_field.custom_field_id }}"  class="button"><i class="fa fa-upload"></i> {{ button_upload }}</button>
+            <button type="button" id="button-payment-custom-field{{ custom_field.custom_field_id }}"  class="button"> {{ button_upload }}</button>
             <input type="hidden" name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" value="" id="input-payment-custom-field{{ custom_field.custom_field_id }}" />
           </div>
           {% endif %}
@@ -364,7 +364,7 @@
       <div id="payment-custom-field{{ custom_field.custom_field_id }}" class="form-group custom-field" data-sort="{{ custom_field.sort_order }}">
         <label>{{ custom_field.name }}</label>
         <br />
-        <button type="button" id="button-payment-custom-field{{ custom_field.custom_field_id }}"  class="button"><i class="fa fa-upload"></i> {{ button_upload }}</button>
+        <button type="button" id="button-payment-custom-field{{ custom_field.custom_field_id }}"  class="button"> {{ button_upload }}</button>
         <input type="hidden" name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" value="" id="input-payment-custom-field{{ custom_field.custom_field_id }}" />
       </div>
       {% endif %}
