--- a/catalog/view/theme/helium/template/checkout/shipping_method.twig
+++ b/catalog/view/theme/helium/template/checkout/shipping_method.twig
@@ -1,5 +1,5 @@
 {% if error_warning %}
-  <div class="alert alert-warning alert-dismissible"><i class="fa fa-exclamation-circle"></i> {{ error_warning }}</div>
+  <div role="alert" class="alert-warning"><i class="icon-alert"></i> {{ error_warning }}</div>
 {% endif %}
 {% if shipping_methods %}
   <form action="index.php?route=checkout/shipping_method/save" method="post" id="shipping_method">
@@ -20,7 +20,7 @@
           </div>
           {% endfor %}
         {% else %}
-          <div class="alert alert-danger alert-dismissible">{{ shipping_method.error }}</div>
+          <div role="alert" class="alert-danger">{{ shipping_method.error }}</div>
         {% endif %}
       {% endfor %}
       <p><strong>{{ text_comments }}</strong></p>
