--- a/catalog/view/theme/helium/template/common/custom_fields.twig
+++ b/catalog/view/theme/helium/template/common/custom_fields.twig
@@ -73,7 +73,7 @@
       {% if custom_field.type == 'file' %}
         <div class="form-group{% if custom_field.required %} required {% endif %} custom-field" data-sort="{{ custom_field.sort_order }}">
           <label>{{ custom_field.name }}</label>
-          <button type="button" id="button-{{ type }}-custom-field{{ custom_field.custom_field_id }}" class="button"><i class="fa fa-upload"></i> {{ button_upload }}</button>
+          <button type="button" id="button-{{ type }}-custom-field{{ custom_field.custom_field_id }}" class="button"> {{ button_upload }}</button>
           <input type="hidden" name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" value="" id="input-{{ type }}-custom-field{{ custom_field.custom_field_id }}" />
         </div>
       {% endif %}
