--- a/catalog/view/theme/helium/template/extension/total/reward.twig
+++ b/catalog/view/theme/helium/template/extension/total/reward.twig
@@ -29,7 +29,7 @@
 // 			$('.alert-dismissible').remove();
 
 // 			if (json['error']) {
-// 				$('.breadcrumb').after('<div class="alert alert-danger alert-dismissible"><i class="fa fa-exclamation-circle"></i> ' + json['error'] + '<button type="button" class="close" data-dismiss="alert">&times;</button></div>');
+// 				$('.breadcrumb').after('<div role="alert" class="alert-danger"><i class="icon-alert"></i> ' + json['error'] + '<button type="button" class="close">&times;</button></div>');
 
 // 				$('html, body').animate({ scrollTop: 0 }, 'slow');
 // 			}
