--- a/catalog/view/theme/helium/template/extension/total/shipping.twig
+++ b/catalog/view/theme/helium/template/extension/total/shipping.twig
@@ -55,7 +55,7 @@
 
 					if (json['error']) {
 						if (json['error']['warning']) {
-							$('.breadcrumb').after('<div class="alert alert-danger alert-dismissible"><i class="fa fa-exclamation-circle"></i> ' + json['error']['warning'] + '<button type="button" class="close" data-dismiss="alert">&times;</button></div>');
+							$('.breadcrumb').after('<div role="alert" class="alert-danger"><i class="icon-alert"></i> ' + json['error']['warning'] + '<button type="button" class="close">&times;</button></div>');
 
 							$('html, body').animate({ scrollTop: 0 }, 'slow');
 						}
@@ -101,7 +101,7 @@
 									html += json['shipping_method'][i]['quote'][j]['title'] + ' - ' + json['shipping_method'][i]['quote'][j]['text'] + '</label></div>';
 								}
 							} else {
-								html += '<div class="alert alert-danger alert-dismissible">' + json['shipping_method'][i]['error'] + '</div>';
+								html += '<div role="alert" class="alert-danger">' + json['shipping_method'][i]['error'] + '</div>';
 							}
 						}
 
@@ -151,7 +151,7 @@
 					$('.alert-dismissible').remove();
 
 					if (json['error']) {
-						$('.breadcrumb').after('<div class="alert alert-danger alert-dismissible"><i class="fa fa-exclamation-circle"></i> ' + json['error'] + '<button type="button" class="close" data-dismiss="alert">&times;</button></div>');
+						$('.breadcrumb').after('<div role="alert" class="alert-danger"><i class="icon-alert"></i> ' + json['error'] + '<button type="button" class="close">&times;</button></div>');
 
 						$('html, body').animate({ scrollTop: 0 }, 'slow');
 					}
