--- a/catalog/view/theme/helium/template/information/contact_grid.twig
+++ b/catalog/view/theme/helium/template/information/contact_grid.twig
@@ -14,7 +14,7 @@
         
         <address>{{ address|nl2br }}</address>
         {% if geocode %}
-          <a class="button" href="https://maps.google.com/maps?q={{ geocode|url_encode }}&hl={{ geocode_hl }}&t=m&z=15" target="_blank" class="btn btn-info"><i class="icon-location"></i> {{ button_map }}</a>
+          <a class="button" href="https://maps.google.com/maps?q={{ geocode|url_encode }}&hl={{ geocode_hl }}&t=m&z=15" target="_blank"><i class="icon-location"></i> {{ button_map }}</a>
         {% endif %}
       </div>
       <div>
@@ -58,7 +58,7 @@
               {{ location.address|nl2br }}
             </address>
             {% if location.geocode %}
-              <a href="https://maps.google.com/maps?q={{ location.geocode|url_encode }}&hl={{ geocode_hl }}&t=m&z=15" target="_blank" class="btn btn-info"><i class="icon-location"></i> {{ button_map }}</a>
+              <a href="https://maps.google.com/maps?q={{ location.geocode|url_encode }}&hl={{ geocode_hl }}&t=m&z=15" target="_blank" ><i class="icon-location"></i> {{ button_map }}</a>
             {% endif %}
           </div>
           <div>
