--- a/catalog/view/theme/helium/template/product/product.twig
+++ b/catalog/view/theme/helium/template/product/product.twig
@@ -168,7 +168,7 @@
           
         </div>
         {% if minimum > 1 %}
-          <div class="alert alert-info"><i class="icon-info"></i> 
+          <div role="alert" class="alert-info"><i class="icon-info"></i> 
             {{ text_minimum }}
           </div>
         {% endif %}
